{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 124,
  "lineage": "e934b767-fc03-2840-a4d8-f9fe1f1704ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00290fce88c399ec3",
            "association_id": "eipassoc-09bfd2d7c745ea3f8",
            "domain": "vpc",
            "id": "eipalloc-00290fce88c399ec3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ce24c033e0e1b56a",
            "private_dns": "ip-10-1-0-108.ec2.internal",
            "private_ip": "10.1.0.108",
            "public_dns": "ec2-52-54-78-11.compute-1.amazonaws.com",
            "public_ip": "52.54.78.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tera-dev-nateip"
            },
            "tags_all": {
              "Name": "tera-dev-nateip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a3c3a20c09d6f377",
            "arn": "arn:aws:ec2:us-east-1:618012222333:instance/i-0d74036daacb42ec4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d74036daacb42ec4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006dbede7165173dc",
            "private_dns": "ip-10-1-0-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.204",
            "public_dns": "ec2-3-81-138-255.compute-1.amazonaws.com",
            "public_ip": "3.81.138.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0186d16b1b3670ed2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0020d679291e70a4e",
            "tags": {
              "Name": "tera-dev-tera-dev"
            },
            "tags_all": {
              "Name": "tera-dev-tera-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f1a612000d6fdfe"
            ]
          },
          "dependencies": [
            "aws_key_pair.test1",
            "aws_security_group.flasksg",
            "aws_subnet.pubsubnets",
            "aws_vpc.test",
            "data.template_file.userdata1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "php",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a3c3a20c09d6f377",
            "arn": "arn:aws:ec2:us-east-1:618012222333:instance/i-060a863d42955fc00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060a863d42955fc00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b7e9ca5dc15b31e",
            "private_dns": "ip-10-1-0-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.119",
            "public_dns": "ec2-54-81-99-110.compute-1.amazonaws.com",
            "public_ip": "54.81.99.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04c0a9f35f3350248",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0020d679291e70a4e",
            "tags": {
              "Name": "tera-dev-tera-dev"
            },
            "tags_all": {
              "Name": "tera-dev-tera-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c08cb755556fe7c"
            ]
          },
          "dependencies": [
            "aws_key_pair.test1",
            "aws_security_group.phpsg",
            "aws_subnet.pubsubnets",
            "aws_vpc.test",
            "data.template_file.userdata1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:internet-gateway/igw-083ce8ec21d6cc5aa",
            "id": "igw-083ce8ec21d6cc5aa",
            "owner_id": "618012222333",
            "tags": {
              "Name": "tera-dev-igw"
            },
            "tags_all": {
              "Name": "tera-dev-igw"
            },
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00290fce88c399ec3",
            "association_id": "eipassoc-09bfd2d7c745ea3f8",
            "connectivity_type": "public",
            "id": "nat-08b8dc1fcf5923f91",
            "network_interface_id": "eni-0ce24c033e0e1b56a",
            "private_ip": "10.1.0.108",
            "public_ip": "52.54.78.11",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0020d679291e70a4e",
            "tags": {
              "Name": "tera-dev-natgw"
            },
            "tags_all": {
              "Name": "tera-dev-natgw"
            }
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_subnet.pubsubnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:route-table/rtb-0ffcb1b30758ec5b6",
            "id": "rtb-0ffcb1b30758ec5b6",
            "owner_id": "618012222333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08b8dc1fcf5923f91",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tera-dev-privateroute"
            },
            "tags_all": {
              "Name": "tera-dev-privateroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_subnet.pubsubnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:route-table/rtb-05714154919a72c47",
            "id": "rtb-05714154919a72c47",
            "owner_id": "618012222333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083ce8ec21d6cc5aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tera-dev-publicroute"
            },
            "tags_all": {
              "Name": "tera-dev-publicroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029a450351b010025",
            "route_table_id": "rtb-0ffcb1b30758ec5b6",
            "subnet_id": "subnet-08a4f322cf5f41896"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_route_table.privateroute",
            "aws_subnet.privsubnets",
            "aws_subnet.pubsubnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0647e211a59ec2194",
            "route_table_id": "rtb-0ffcb1b30758ec5b6",
            "subnet_id": "subnet-0aa0e98edb605d5fe"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_route_table.privateroute",
            "aws_subnet.privsubnets",
            "aws_subnet.pubsubnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd1aeccd9283c98f",
            "route_table_id": "rtb-0ffcb1b30758ec5b6",
            "subnet_id": "subnet-0055fd2a53c0d533f"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_route_table.privateroute",
            "aws_subnet.privsubnets",
            "aws_subnet.pubsubnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06068a69d4f30cbf0",
            "route_table_id": "rtb-05714154919a72c47",
            "subnet_id": "subnet-0020d679291e70a4e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0226a8cbee07bfd48",
            "route_table_id": "rtb-05714154919a72c47",
            "subnet_id": "subnet-0929f843732c4dfcc"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0323dc91382b4fd33",
            "route_table_id": "rtb-05714154919a72c47",
            "subnet_id": "subnet-00fc2e578bd20a859"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flasksg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:security-group/sg-02f1a612000d6fdfe",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f1a612000d6fdfe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "flasksg",
            "name_prefix": "",
            "owner_id": "618012222333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tera-dev-flasksg"
            },
            "tags_all": {
              "Name": "tera-dev-flasksg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "phpsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:security-group/sg-00c08cb755556fe7c",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c08cb755556fe7c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "php1",
            "name_prefix": "",
            "owner_id": "618012222333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tera-dev-phpsg"
            },
            "tags_all": {
              "Name": "tera-dev-phpsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:security-group/sg-02f5cc22aabab5ac0",
            "description": "Allow 8080 and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f5cc22aabab5ac0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c08cb755556fe7c"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "ssh from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f1a612000d6fdfe"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "618012222333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tera-dev-rdssg"
            },
            "tags_all": {
              "Name": "tera-dev-rdssg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.flasksg",
            "aws_security_group.phpsg",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:subnet/subnet-08a4f322cf5f41896",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a4f322cf5f41896",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618012222333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-dev-privatesub-1"
            },
            "tags_all": {
              "Name": "tera-dev-privatesub-1"
            },
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:subnet/subnet-0aa0e98edb605d5fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa0e98edb605d5fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618012222333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-dev-privatesub-2"
            },
            "tags_all": {
              "Name": "tera-dev-privatesub-2"
            },
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:subnet/subnet-0055fd2a53c0d533f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0055fd2a53c0d533f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618012222333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-dev-privatesub-3"
            },
            "tags_all": {
              "Name": "tera-dev-privatesub-3"
            },
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:subnet/subnet-0020d679291e70a4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0020d679291e70a4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "618012222333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-dev-pubsubnet-1"
            },
            "tags_all": {
              "Name": "tera-dev-pubsubnet-1"
            },
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:subnet/subnet-0929f843732c4dfcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0929f843732c4dfcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "618012222333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-dev-pubsubnet-2"
            },
            "tags_all": {
              "Name": "tera-dev-pubsubnet-2"
            },
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:subnet/subnet-00fc2e578bd20a859",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fc2e578bd20a859",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "618012222333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-dev-pubsubnet-3"
            },
            "tags_all": {
              "Name": "tera-dev-pubsubnet-3"
            },
            "vpc_id": "vpc-07ac090ced10d0b81"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618012222333:vpc/vpc-07ac090ced10d0b81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-04ebfb51155ad68f8",
            "default_route_table_id": "rtb-0048c29c88e93e044",
            "default_security_group_id": "sg-02751d9c89b7199ec",
            "dhcp_options_id": "dopt-034a6d3239e3a2ce2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ac090ced10d0b81",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0048c29c88e93e044",
            "owner_id": "618012222333",
            "tags": {
              "Name": "tera-dev"
            },
            "tags_all": {
              "Name": "tera-dev"
            }
          }
        }
      ]
    }
  ]
}